# esp32_ir_nec

./: .gitignore  README.md  pytest_ir_nec.py  sdkconfig
main/: CMakeLists.txt  idf_component.yml  index.html  ir_nec.c  ir_nec.h  main.c
